--- a/index.html
+++ b/index.html
@@ -36,9 +36,53 @@
                     <img class="auto_skill" src="auto_skill_pvp.png" />
                 </div>
             </div>
-
         </div>
-        <div class="name">출처 - <a href="https://www.youtube.com/channel/UCwufBzs0EL9xLoGRg9eT4DA"> YouTube 검은사막스텝 [채널로 이동]</a></div>
+        <div class="box_line">
+            <div class="name">계열</div>
+            <div class="name">(아히브 > 라브리프 = 아알)</div>
+            <div class="skill_img_template">
+                <img class="auto_skill" src="auto_skill_line.png" />
+            </div>
+        </div>
+        <div class="skill_table">
+            <div class="name">
+            <table width="85%">
+                <th width="50%">스킬</th>
+                <th width="50%">거리</th>
+                <tr>
+                    <td>황폐화</td>
+                    <td>5M</td>
+                </tr>
+                <tr>
+                    <td>폭쇄</td>
+                    <td>6M</td>
+                </tr>
+                <tr>
+                    <td>난타</td>
+                    <td>8M</td>
+                </tr>
+                <tr>
+                    <td>화염 철포</td>
+                    <td>11M</td>
+                </tr>
+                <tr>
+                    <td>순간 포격</td>
+                    <td>11M</td>
+                </tr>
+                <tr>
+                    <td>화염 도약</td>
+                    <td>35M</td>
+                </tr>
+                <tr>
+                    <td>회피</td>
+                    <td>9M</td>
+                </tr>
+        
+            </div>
+            </table>
+</div>
+</div>
+        <div class="name">출처 -<a href="https://www.youtube.com/watch?v=GIwwpv-EdQI"> YouTube 검은사막스텝 [채널로 이동]</a></div>
     </div>
 </body>
 </html>
